@@ -16,11 +16,3 @@ gda_sybase_srv_LDADD = \
 	$(top_builddir)/libgda/libgda-2.la \
 	$(SYBASE_LIBS)
 
-serverdir=$(libdir)/bonobo/servers
-
-server_in_files = GNOME_Database_Provider_Sybase.server.in
-server_DATA = $(server_in_files:.server.in=.server)
-
-@INTLTOOL_SERVER_RULE@
-
-EXTRA_DIST=$(server_in_files) $(server_DATA)
