@@ -1,3 +1,7 @@
+2002-05-02  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* providers/sybase/Makefile.am: removed .server-related stuff.
+
 2002-05-02  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>
 
 	* libgda/gda-config.c: change "boolean" by "bool".
